--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@
   text-decoration: none;
   text-align: center;
   padding: 0.3rem 0;
-  margin: 1.5rem 0 0 5rem;
+  margin: 1.5rem 2rem 0;
   border-radius: 9999px;
   border: 2px solid #FFF;
 }
@@ -40,17 +40,11 @@
 
 @media screen and (max-width: 768px) {
   .button {
-    margin: 0 0 1rem 19rem;
+    margin: 1rem 2rem;
   }
   
   .title {
     padding-top: 0;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .button {
-    margin: 0 0 2rem 13rem;
   }
 }
 
@@ -62,17 +56,13 @@ nav {
   background-color: #b2cde4;
 }
 
-nav div {
-  height: 12vh;
-}
-
 nav a {
   display: block;
   color: #337AB7;
   font-weight: bold;
   font-size: 2rem;
   letter-spacing: 0.15rem;
-  margin-top: 2rem;
+  margin-top: 1.5vh;
 }
 
 nav a:hover {
@@ -85,17 +75,13 @@ nav a:active {
   color: #000;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 768px) {
   nav li {
     display: block;
     width: 100%;
     text-align: center;
     border-bottom: 2px solid #337AB7;
     margin-bottom: 1rem;
-  }
-  
-  nav div {
-    height: 50vh;
   }
 }
 
