--- a/main.css
+++ b/main.css
@@ -85,6 +85,12 @@ nav a:active {
   }
 }
 
+@media screen and (min-width: 768px) {
+  nav div {
+    height: 7vh;
+  }
+}
+
 /*================================================================
     PARAGRAPH STYLES
 ================================================================*/
